--- a/www/package.json
+++ b/www/package.json
@@ -10,6 +10,12 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "jade": "^1.11.0",
+    "node-sass": "^3.10.1",
+    "sass": "^0.5.0",
+    "sass-loader": "^4.0.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.3.1",
     "vue": "^2.0.1"
   },
   "devDependencies": {
